# llm-benchmark-datasets

./: .env.example  README  pyproject.toml  requirements.txt
data/abstracts_rosario/: ._test.csv  dev.csv  test.csv
notebooks/: evaluation_multilabel.ipynb  evaluation_multinomial.ipynb  evaluation_ner.ipynb
notebooks/.ipynb_checkpoints/: evaluating-checkpoint.ipynb  evaluation_multilabel-checkpoint.ipynb
src/: multi_label_main.py  multinomial_main.py  ner_main.py
src/.ipynb_checkpoints/: multi_label_main-checkpoint.py
src/evaluation/: metrics.py  multilabel_predictor.py  multinomial_predictor.py  ner_predictor.py
src/models/: base_llm.py  base_multilabel.py  base_multinomial.py  base_ner.py  huggingface_llm.py  llm_multilabel_model.py  llm_ner_model.py  openai_llm.py
src/models/.ipynb_checkpoints/: huggingface_llm-checkpoint.py  llm_multilabel_model-checkpoint.py  llm_multinomial_model-checkpoint.py
src/prompts/: base_prompt.py  multilabel_prompt.py  multinomial_prompt.py  ner_prompt.py
src/prompts/.ipynb_checkpoints/: multilabel_prompt-checkpoint.py
src/utils/: batch_connection.py  knn_retriever.py  multilabel_datareader.py  multinomial_datareader.py  ner_datareader.py  self_verification.py
src/utils/.ipynb_checkpoints/: jel_categories-checkpoint.py
